fixed width on mobile version

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,11 +1,15 @@
 // Home Content
 
+
 .home {
 
-
-
-
-
+  .header{
+  //  @media @mobile{
+  //    .img{
+  //      display:flex;
+  //    }
+  //  }
+  }
 
   .intro {
 
